syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gx.wisestone.core.grpc.lib.common";
option java_outer_classname = "WscoreCommonProto";
package com.gx.wisestone.core.grpc.common;

//查询 结构体
message QueryDto {
    //当前页码
    int32 page = 1; 
    //每页数量
    int32 page_size = 2; 
    //总数
    int64 total_count = 3; 
    //总页数
    int32 page_count = 4; 
    //创建时间起始
    int64 create_time_from = 5; 
    //创建时间结束
    int64 create_time_to = 6; 
    //修改时间起始
    int64 modify_time_from = 7; 
    //修改时间结束
    int64 modify_time_to = 8; 
    //分库标识
    int64 tenant = 9; 
    //ID集合
    repeated int64 id_array = 10; 
    int32 sys_tenant_no = 11;
    //排序 ASC/DESC
    string sort = 12;
    //排序字段
    string sort_by = 13;
}

//
message BaseResp {
    int32 code = 1;
    string msg = 2;
    map<string, string> data = 3;
}
